--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                                 <i class="uil uil-brackets-curly skills__icon"></i>
 
                                 <div>
-                                    <h1 class="skills__titles">rogramming Languages</h1>
+                                    <h1 class="skills__titles">Programming</h1>
                                     <!-- <span class="skills__subtitle">More than 8 years</span> -->
                                 </div>
 
@@ -292,7 +292,7 @@
                                 <i class="uil uil-vector-square skills__icon"></i>
 
                                 <div>
-                                    <h1 class="skills__titles">Data Manipulation and Analysis</h1>
+                                    <h1 class="skills__titles">Data Analysis</h1>
                                     <!-- <span class="skills__subtitle">More than 2 years</span> -->
                                 </div>
 
@@ -364,7 +364,7 @@
                                 <i class="uil uil-arrow skills__icon"></i>
 
                                 <div>
-                                    <h1 class="skills__titles">Machine Learning and AI</h1>
+                                    <h1 class="skills__titles">Machine Learning & AI</h1>
                                     <!-- <span class="skills__subtitle">More than 2 years</span> -->
                                 </div>
 
@@ -530,7 +530,7 @@
                              <div class="qualification__data">
                                 <div>
                                     <span class="qualification__degree">Meknès</span>
-                                    <h3 class="qualification__tittle">Bac Science mathématiques A</h3>
+                                    <h3 class="qualification__tittle">Bac Sciences math A</h3>
                                     <span class="qualification__subtitle">Lycée Flowers High School</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
@@ -553,7 +553,7 @@
 
                                 <div>
                                     <span class="qualification__degree">Meknès</span>
-                                    <h3 class="qualification__tittle">CPGE | MP/MPSI </h3>
+                                    <h3 class="qualification__tittle">CPGE - MP/MPSI </h3>
                                     <span class="qualification__subtitle">Lycée Omar Ibn Al Khattab</span>
                                     <div class="qualification__calendar">
                                         <i class="uil uil-calendar-alt"></i>
@@ -609,8 +609,8 @@
                             <!--==================== QUALIFICATION  1 ====================-->
                             <div class="qualification__data">
                                <div>
-                                   <h3 class="qualification__tittle">Intern Fullstack developper/h3>
-                                   <span class="qualification__subtitle">Les conserves de Aicha</span>
+                                   <h3 class="qualification__tittle">Intern Fullstack Developper</h3>
+                                   <span class="qualification__subtitle">Aicha</span>
                                    <div class="qualification__calendar">
                                        <i class="uil uil-calendar-alt"></i>
                                        2023
@@ -623,24 +623,22 @@
                            </div>
 
                             <!--==================== QUALIFICATION  2 ====================-->
-                             <div class="qualification__data">
-                                <!-- <div></div> -->
-
-                                <!-- <div>
-                                    <span class="qualification__rounder"></span> -->
-                                    <!-- <span class="qualification__line"></span> -->
-                                <!-- </div> -->
-
-                                <!-- <div>
-                                    <h3 class="qualification__tittle">Nuclear Engineer</h3>
-                                    <span class="qualification__subtitle">Hacettepe University</span>
-                                    <div class="qualification__calendar">
-                                        <i class="uil uil-calendar-alt"></i>
-                                        2008 - 2013
-                                    </div>
-                                </div> -->
- 
-                            </div>
+                        <div class="qualification__content" data-content id="work">
+                            <!--==================== QUALIFICATION  1 ====================-->
+                            <div class="qualification__data">
+                               <div>
+                                   <h3 class="qualification__tittle"></h3>
+                                   <span class="qualification__subtitle"></span>
+                                   <div class="qualification__calendar">
+                                       <i class="uil uil-calendar-alt"></i>
+                                       
+                                   </div>
+                               </div>
+                               <div>
+                                   <span class="qualification__rounder"></span>
+                                   <span class="qualification__line"></span>
+                               </div>
+                           </div>
 
                        </div>
 
@@ -658,7 +656,7 @@
                     <div class="projects__content">
                         <div>
                             <i class="uil uil-swatchbook projects__icon"></i>
-                            <h3 class="projects__title">>Detection Of Microcalcifications In Mammography</h3>
+                            <h3 class="projects__title">Coding Week ML</h3>
                         </div>
 
                         <span class="button button--flex button--small button--link projects__button">
@@ -693,7 +691,7 @@
                     <div class="projects__content">
                         <div>
                             <i class="uil uil-swatchbook projects__icon"></i>
-                            <h3 class="projects__title">• Integration of AI in IOT devices</h3>
+                            <h3 class="projects__title">AI in IOT</h3>
                         </div>
 
                         <span class="button button--flex button--small button--link projects__button">
@@ -779,7 +777,7 @@
                     <div class="projects__content">
                         <div>
                             <i class="uil uil-swatchbook projects__icon"></i>
-                            <h3 class="projects__title">Investment Portfolio Optimisation</h3>
+                            <h3 class="projects__title">Portfolio</h3>
                         </div>
 
                         <span class="button button--flex button--small button--link projects__button">
@@ -876,7 +874,7 @@
                                 <ul class="projects__modal-projects grid">
                                     <li class="projects__modal-project">
                                         <i class="uil uil-check-circle projects__modal-icon"></i>
-                                        <p>Dans ce projet, nous nous intéressons à l'étude des systèmes dynamiques de géométrie fractale. Les fractales sont des objets mathématiques complexes et auto-similaires, qui présentent des motifs répétitifs à différentes échelles. Les systèmes dynamiques permettent de modéliser l'évolution temporelle de divers phénomènes naturels et artificiels, en utilisant des équations mathématiques. L'objectif principal de cette étude est de comprendre comment les fractales se comportent et évoluent dans un contexte dynamique. Nous cherchons à décrire mathématiquement l'évolution des fractales au fil du temps, en utilisant des systèmes dynamiques appropriés. Cela nous permettra d'explorer les propriétés émergentes des fractales, telles que leur croissance, leur variation et leur stabilité.</p>
+                                        <p>L'objectif principal de cette étude est de comprendre comment les fractales se comportent et évoluent dans un contexte dynamique.</p>
                                     </li>
                                 </ul>
                             </div>
