--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@
                         </div>
                     </div>                       
 
-                    <!--==================== PROJECTS 6 ====================-->
+                    <!--==================== PROJECTS 7 ====================-->
                     <div class="projects__content">
                         <div>
                             <i class="uil uil-swatchbook projects__icon"></i>
@@ -849,37 +849,16 @@
                                         <i class="uil uil-check-circle projects__modal-icon"></i>
                                         <p>Travaux d’initiative personnelle encadrée</p>
                                     </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div> 
-
-                    <!--==================== PROJECTS 7 ====================-->
-                    <div class="projects__content">
-                        <div>
-                            <i class="uil uil-swatchbook projects__icon"></i>
-                            <h3 class="projects__title">Fractales</h3>
-                        </div>
-
-                        <span class="button button--flex button--small button--link projects__button">
-                            View More
-                            <i class="uil uil-arrow-right button__icon"></i>
-                        </span>
-
-                        <div class="projects__modal">
-                            <div class="projects__modal-content">
-                                <h4 class="projects__modal-title">Fractales de Mandelbrot et espaces de Julia</h4>
-                                <i class="uil uil-times projects__modal-close"></i>
-
-                                <ul class="projects__modal-projects grid">
                                     <li class="projects__modal-project">
                                         <i class="uil uil-check-circle projects__modal-icon"></i>
-                                        <p>L'objectif principal de cette étude est de comprendre comment les fractales se comportent et évoluent dans un contexte dynamique.</p>
+                                        <p>CPGE</p>
                                     </li>
                                 </ul>
                             </div>
                         </div>
-                    </div>
+                    </div> 
+                </div>
+            </section>
 
 
             <!--==================== CERTIFICATIONS ====================-->
