--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@
                     <div class="swiper-wrapper">
                         <!--==================== certification 1 ====================-->
                         <div class="certification__content grid swiper-slide">
-                            <img src="assets/img/certification1.jpg" alt="CFD code OpenFOAM mesh for pool scrubbing geometry" class="certification__img">
+                            <img src="assets/img/paper1.jpg" alt="IBM machine learning" class="certification__img">
 
                             <div class="certification__dat">
                                 <h3 class="certification__title">IBM Machine Learning</h3>
@@ -884,7 +884,7 @@
 
                         <!--==================== certification 2 ====================-->
                         <div class="certification__content grid swiper-slide">
-                            <img src="assets/img/certification2.jpg" alt="Small modular reactor containment pressure and radioactivity" class="certification__img">
+                            <img src="assets/img/paper4.jpg" alt="datastructure" class="certification__img">
 
                             <div class="certification__dat">
                                 <h3 class="certification__title">Database Structures and Management with MySQL</h3>
@@ -898,7 +898,7 @@
 
                         <!--==================== certification 3 ====================-->
                         <div class="certification__content grid swiper-slide">
-                            <img src="assets/img/certification3.jpg" alt="Integral experiment test facility" class="certification__img">
+                            <img src="assets/img/paper2.jpg" alt="Scrummaster" class="certification__img">
 
                             <div class="certification__dat">
                                 <h3 class="certification__title">Scrum Master Certification</h3>
@@ -912,7 +912,7 @@
 
                         <!--==================== certification 4 ====================-->
                         <div class="certification__content grid swiper-slide">
-                            <img src="assets/img/certification4.jpg" alt="Wall condensation experiment" class="certification__img">
+                            <img src="assets/img/paper3.jpg" alt="projectmanagement" class="certification__img">
 
                             <div class="certification__dat">
                                 <h3 class="certification__title">Google Project Management</h3>
