--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                             </a>
                         </li>
                         <li class="nav__item">
-                            <a href="#certifications" class="nav__link">
-                                <i class="uil uil-scenery nav__icon"></i> Certifications
+                            <a href="#papers" class="nav__link">
+                                <i class="uil uil-scenery nav__icon"></i> papers
                             </a>
                         </li>
                         <li class="nav__item">
@@ -867,8 +867,8 @@
 
 
             <!--==================== PAPERS ====================-->
-            <section class="certification section" id="certification" data-id="certification">
-                <h2 class="section__title">Certifications</h2>
+            <section class="paper section" id="paper" data-id="paper">
+                <h2 class="section__title">papers</h2>
                 <span class="section__subtitle">Professional certificates</span>
                 
                 <div class="paper__container container swiper">
@@ -878,9 +878,9 @@
                             <img src="assets/img/paper1.jpg" alt="CFD code OpenFOAM mesh for pool scrubbing geometry" class="paper__img">
 
                             <div class="paper__dat">
-                                <h3 class="certification__title">IBM Machine Learning</h3>
-                                <p class="certification__description">Master machine learning techniques, data analysis, and AI model deployment</p>
-                                <a href="https://coursera.org/verify/professional-cert/J2JWYPMWPMZH" target="_blank" class="button button--flex button--small certification__button">
+                                <h3 class="paper__title">IBM Machine Learning</h3>
+                                <p class="paper__description">Master machine learning techniques, data analysis, and AI model deployment</p>
+                                <a href="https://coursera.org/verify/professional-cert/J2JWYPMWPMZH" target="_blank" class="button button--flex button--small paper__button">
                                     Read
                                     <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
@@ -1256,7 +1256,7 @@
                             <a href="#projects" class="footer__link">Projects</a>
                         </li>
                         <li>
-                            <a href="#certification" class="footer__link">certifications</a>
+                            <a href="#paper" class="footer__link">papers</a>
                         </li>
                         <li>
                             <a href="#testimonials" class="footer__link">References</a>
