--- a/index.html
+++ b/index.html
@@ -1024,17 +1024,24 @@
             </section>
 
             <!--==================== VIDEOS ====================-->
-            <section class="videos section" id="videos">
-                <h2 class="section__title">Videos</h2>
-                <span class="section__subtitle">Appearances</span>
-
-                <div class="videos__container container grid">
-                    <div class="videos__content-top">
-                        <div class="iframe__container">
-                            <span class="videos__subtitle">Global SMR & MMR Development Activities</span>
-                            <iframe class="iframe" width="100%" height="100%" src="https://www.youtube.com/embed/qrbo3MOFXLc?rel=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <section class="videos section" id="videos">
+                    <h2 class="section__title">Videos</h2>
+                    <span class="section__subtitle">Appearances</span>
+                
+                    <div class="videos__container container grid">
+                        <div class="videos__content-top">
+                            <div class="iframe__container">
+                                <span class="videos__subtitle">Global SMR & MMR Development Activities</span>
+                                <!-- Replace this iframe with the LinkedIn embed code -->
+                                <script src="https://platform.linkedin.com/in.js" type="text/javascript">
+                                    lang: en_US
+                                </script>
+                                <script type="IN/Share" data-url="https://www.linkedin.com/posts/salma-benslimane-1b3ab7246_c%C3%A9r%C3%A9moniederemisedesdipl%C3%B4mes-musique-ing%C3%A9nierie-activity-7088911637146939392-rkEg"></script>
+                            </div>
                         </div>
                     </div>
+
+
                     <div class="videos__content">
                         <div class="iframe__container">
                             <span class="videos__subtitle">KNS Workshop on SMR & MMR</span>
