--- a/index.html
+++ b/index.html
@@ -1032,14 +1032,12 @@
                         <div class="videos__content-top">
                             <div class="iframe__container">
                                 <span class="videos__subtitle">Global SMR & MMR Development Activities</span>
-                                <!-- Replace this iframe with the LinkedIn embed code -->
-                                <script src="https://platform.linkedin.com/in.js" type="text/javascript">
-                                    lang: en_US
-                                </script>
-                                <script type="IN/Share" data-url="https://www.linkedin.com/posts/salma-benslimane-1b3ab7246_c%C3%A9r%C3%A9moniederemisedesdipl%C3%B4mes-musique-ing%C3%A9nierie-activity-7088911637146939392-rkEg"></script>
+                                <iframe class="iframe" src="https://www.facebook.com/video/embed?video_id=276582075349298" width="100%" height="100%" frameborder="0" allowfullscreen="true"></iframe>
                             </div>
                         </div>
                     </div>
+                </section>
+
 
 
                     <div class="videos__content">
