--- a/index.html
+++ b/index.html
@@ -1031,8 +1031,8 @@
                     <div class="videos__container container grid">
                         <div class="videos__content-top">
                             <div class="iframe__container">
-                                <span class="videos__subtitle">Global SMR & MMR Development Activities</span>
-                                <iframe class="iframe" src="https://www.facebook.com/video/embed?video_id=276582075349298" width="100%" height="100%" frameborder="0" allowfullscreen="true"></iframe>
+                                <span class="videos__subtitle">Centrale's got talent - @salma__benslimane ( Élève en 2ème année)</span>
+                                <iframe class="iframe" src="https://www.facebook.com/video/embed?video_id=276582075349298" width="320" height="568" frameborder="0" allowfullscreen="true"></iframe>
                             </div>
                         </div>
                     </div>
