--- a/index.html
+++ b/index.html
@@ -1032,8 +1032,8 @@
                         <div class="videos__content-top">
                             <div class="iframe__container">
                                 <span class="videos__subtitle">Global SMR & MMR Development Activities</span>
-                                <div class="facebook-video">
-                                    <iframe src="https://www.facebook.com/video/embed?video_id=276582075349298" width="320" height="568" frameborder="0" allowfullscreen="true"></iframe>
+                                <div class="instagram-video">
+                                    <iframe src="https://www.instagram.com/reel/Cy1gqDhrKsF/" width="320" height="568" frameborder="0" allowfullscreen="true"></iframe>
                                 </div>
                             </div>
                         </div>
