--- a/index.html
+++ b/index.html
@@ -1032,13 +1032,17 @@
                         <div class="videos__content-top">
                             <div class="iframe__container">
                                 <span class="videos__subtitle">Global SMR & MMR Development Activities</span>
-                                <div class="instagram-video">
-                                    <iframe src="https://www.instagram.com/reel/Cy1gqDhrKsF/" width="320" height="568" frameborder="0" allowfullscreen="true"></iframe>
+                                <div class="instagram-reel">
+                            <iframe src="https://www.instagram.com/reel/Cy1gqDhrKsF/?utm_source=ig_embed&amp;utm_campaign=loading" width="540" height="725" frameborder="0" scrolling="no"></iframe>
+                        </div>
+    
                                 </div>
                             </div>
                         </div>
                     </div>
                 </section>
+
+            
 
 
 
