--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@
                 <span class="section__subtitle">Parascolar</span>
 
                 <div class="about__container container grid">
-                    <img src="assets/img/about.png" alt="Erol Bicer Nuclear Power Plants Summit Session" class="about__img">
+                    <img src="assets/img/about2.png" alt="Erol Bicer Nuclear Power Plants Summit Session" class="about__img">
 
 
                     <div class="about__data">
