--- a/index.html
+++ b/index.html
@@ -977,7 +977,7 @@
 
 
                     <div class="about__data">
-                        <p class="about__description">With a deep passion for music, I am an artist who enjoys singing and playing the guitar. In fact, I had the privilege of showcasing my vocal talents by performing at the Cérémonie de remise des diplômes 2022. Beyond my musical endeavors, my commitment to school extracurricular activities is equally strong. I co-founded and currently serve as the Vice President of the Club Studio Centrale Casablanca. I also have taken on responsibilities as the Deputy Secretary-General at Bureau des étudiants and the Community Manager for the Bureau des sports.</p>
+                        <p class="about__description">With a deep passion for music, I am an artist who enjoys singing and playing the guitar. In fact, I had the privilege of performing at the Cérémonie de remise des diplômes 2022. For my commitment to extracurricular, I co-founded and currently serve as the Vice President of Club Studio Centrale Casablanca. I also have taken on responsibilities as the Deputy Secretary-General at Bureau des étudiants and Community Manager for the Bureau des sports.</p>
 
 
 
