--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
                             <a href="https://ma.linkedin.com/in/salma-benslimane-1b3ab7246/ar?trk=organization_guest_main-feed-card-text" target="_blank" class="home__social-icon">
                                 <i class="uil uil-linkedin-alt"></i>
                             </a>
-                            <a href="https://www.researchgate.net/profile/Erol-Bicer/research" target="_blank" class="home__social-icon">
-                                <i class="uil uil-book-open"></i>
+                            <a href="https://www.instagram.com/salma__benslimane/" target="_blank" class="footer__social">
+                              <i class="uil uil-instagram"></i>
                             </a>
                             <a href="https://github.com/salmabenslimane" target="_blank" class="home__social-icon">
                                 <i class="uil uil-github-alt"></i>
@@ -1077,39 +1077,29 @@
                             <a href="#projects" class="footer__link">Projects</a>
                         </li>
                         <li>
-                            <a href="#paper" class="footer__link">papers</a>
-                        </li>
-                        <li>
-                            <a href="#testimonials" class="footer__link">References</a>
-                        </li>
-                        <li>
-                            <a href="#videos" class="footer__link">Videos</a>
+                            <a href="#paper" class="footer__link">Certifications</a>
                         </li>
                         <li>
                             <a href="#meeting" class="footer__link">Meeting</a>
                         </li>
-                        <li>
-                            <a href="#presentation" class="footer__link">Presentations</a>
-                        </li>
                     </ul>
 
                     <div class="footer__socials">
-                        <a href="https://www.linkedin.com/in/erolbicer/" target="_blank" class="footer__social">
+                        <a href="https://www.linkedin.com/in/salma-benslimane-1b3ab7246?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BPXYA6IqwQfmQ3xRCm%2FufjA%3D%3D" target="_blank" class="footer__social">
                             <i class="uil uil-linkedin-alt"></i>
                         </a>
-
-                        <a href="https://www.researchgate.net/profile/Erol-Bicer/research" target="_blank" class="footer__social">
-                            <i class="uil uil-book-open"></i>
+                        <a href="https://www.instagram.com/salma__benslimane/" target="_blank" class="footer__social">
+                          <i class="uil uil-instagram"></i>
                         </a>
 
-                        <a href="https://github.com/nucerl" target="_blank" class="footer__social">
+                        <a href="https://github.com/salmabenslimane" target="_blank" class="footer__social">
                             <i class="uil uil-github-alt"></i>
                         </a>
 
                     </div>
                 </div>
 
-                <p class="footer__copy">&#169; All rights reserved.</p>
+                <p class="footer__copy">Salma Benslimane's e-portfolio</p>
             </div>
         </footer>
         
