--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                 <i class="uil uil-linkedin-alt"></i>
                             </a>
                             <a href="https://www.instagram.com/salma__benslimane/" target="_blank" class="footer__social">
-                              <i class="uil uil-instagram"></i>
+                              <i class="uil uil-instagram-alt"></i>
                             </a>
                             <a href="https://github.com/salmabenslimane" target="_blank" class="home__social-icon">
                                 <i class="uil uil-github-alt"></i>
