--- a/index.html
+++ b/index.html
@@ -330,7 +330,63 @@
 
                     <div>
 
+                    <!--==================== SKILLS 3 ====================-->
+                    <div class="skills__content skills__close">
+                            <div class="skills__header">
+                                <i class="uil uil-arrow skills__icon"></i>
 
+                                <div>
+                                    <h1 class="skills__titles">Machine Learning & AI</h1>
+                                    <!-- <span class="skills__subtitle">More than 2 years</span> -->
+                                </div>
+
+                                <i class="uil uil-angle-down skills__arrow"></i>
+                            </div>
+
+                            <div class="skills__list grid">
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">TensorFlow and Keras</h3>
+                                        <span class="skills__number">Proficient</span> 
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percantage skills__60"></span>
+                                    </div>
+                                </div>
+
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">Scikit-Learn</h3>
+                                        <span class="skills__number">Intermediate</span> 
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percantage skills__40"></span>
+                                    </div>
+                                </div>
+
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">Natural language processing (NLP)</h3>
+                                        <span class="skills__number">Beginner</span> 
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percantage skills__20"></span>
+                                    </div>
+                                </div>
+                                
+                                <div class="skills__data">
+                                    <div class="skills__titles">
+                                        <h3 class="skills__name">Computer Vision</h3>
+                                        <span class="skills__number">Beginner</span> 
+                                    </div>
+                                    <div class="skills__bar">
+                                        <span class="skills__percantage skills__20"></span>
+                                    </div>
+                                </div>
+
+
+                            </div>
+                        </div>  
 
                         <!--==================== SKILLS 4 ====================-->
                         <div class="skills__content skills__close">
