--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
 
         <!--==================== TITLE and Favicon ====================-->
-        <title>Erol Salma's Portfolio 👋</title>
+        <title>Salma's Portfolio 👋</title>
         <!-- <link rel="shortcut icon" type="image/png" href="assets/img/"> --> 
         <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon_io/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon_io/favicon-32x32.png">
@@ -99,8 +99,8 @@
                             </a>
                         </li>
                         <li class="nav__item">
-                            <a href="#papers" class="nav__link">
-                                <i class="uil uil-scenery nav__icon"></i> papers
+                            <a href="#about2" class="nav__link">
+                                <i class="uil uil-scenery nav__icon"></i> Civic
                             </a>
                         </li>
                         <li class="nav__item">
@@ -135,7 +135,7 @@
                                 <i class="uil uil-linkedin-alt"></i>
                             </a>
                             <a href="https://www.instagram.com/salma__benslimane/" target="_blank" class="footer__social">
-                              <i class="uil uil-instagram-alt"></i>
+                              <i class="uil uil-instagram"></i>
                             </a>
                             <a href="https://github.com/salmabenslimane" target="_blank" class="home__social-icon">
                                 <i class="uil uil-github-alt"></i>
@@ -931,7 +931,7 @@
 
 
             <!--==================== civic ====================-->
-            <section class="testimonial section" id="testimonials">
+            <section class="about2" id="about2">
                 <h2 class="section__title">Civic & Interests</h2>
                 <span class="section__subtitle">Parascolar</span>
 
