--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                 <i class="uil uil-linkedin-alt"></i>
                             </a>
                             <a href="https://www.instagram.com/salma__benslimane/" target="_blank" class="footer__social">
-                              <i class="uil uil-instagram-alt"></i>
+                              <i class="uil uil-instagram"></i>
                             </a>
                             <a href="https://github.com/salmabenslimane" target="_blank" class="home__social-icon">
                                 <i class="uil uil-github-alt"></i>
@@ -156,7 +156,7 @@
                                     129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                                     -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z"/>
 
-                                    <image class="home__blob-img" x='12' y='18' xlink:href="assets/img/perfil.png"/>
+                                    <image class="home__blob-img" x='12' y='18'  width='150' height='150' xlink:href="assets/img/perfil.png"/>
                                 </g>
                             </svg>
                         </div>
