--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                             <a href="https://ma.linkedin.com/in/salma-benslimane-1b3ab7246/ar?trk=organization_guest_main-feed-card-text" target="_blank" class="home__social-icon">
                                 <i class="uil uil-linkedin-alt"></i>
                             </a>
-                            <a href="https://www.instagram.com/salma__benslimane/" target="_blank" class="footer__social">
+                            <a href="https://www.instagram.com/salma__benslimane/" target="_blank" class="footer__social-icon">
                               <i class="uil uil-instagram"></i>
                             </a>
                             <a href="https://github.com/salmabenslimane" target="_blank" class="home__social-icon">
