--- a/index.html
+++ b/index.html
@@ -37,26 +37,26 @@
         <!-- <link rel="manifest" href="/site.webmanifest"> -->
 
         <!-- MS Tile - for Microsoft apps-->
-        <meta name="msapplication-TileImage" content="https://github.com/nucerl/myPortfolio/blob/main/assets/snaps/light.png?raw=true" />    
+        <meta name="msapplication-TileImage" content="https://github.com/salmabenslimane/portfolio/blob/main/assets/img/light.png?raw=true" />    
 
         <!-- HTML Meta Tags -->
         <title>Erol Salma's Portfolio 👋</title>
         <meta name="description" content="Second Year Generalist Student Engineer at Ecole Centrale Casablanca with a specialization in Data analysis and AI Engineering.">
 
         <!-- Facebook Meta Tags -->
-        <meta property="og:url" content="https://main--cerulean-bavarois-a40e0b.netlify.app/">
+        <meta property="og:url" content="https://main--benslimane.netlify.app/">
         <meta property="og:type" content="website">
         <meta property="og:title" content="Salma Benslimane's Portfolio 👋">
         <meta property="og:description" content="Second Year Generalist Student Engineer at Ecole Centrale Casablanca with a specialization in Data analysis and AI Engineering.">
-        <meta property="og:image" content="https://github.com/nucerl/myPortfolio/blob/main/assets/snaps/light.png?raw=true">
+        <meta property="og:image" content="https://github.com/salmabenslimane/portfolio/blob/main/assets/img/light.png?raw=true">
 
         <!-- Twitter Meta Tags -->
         <meta name="twitter:card" content="summary_large_image">
-        <meta property="twitter:domain" content="erolbicer.com">
-        <meta property="twitter:url" content="https://www.erolbicer.com/">
+        <meta property="twitter:domain" content="salmabenslimane.me">
+        <meta property="twitter:url" content="https://www.salmabenslimane.me/">
         <meta name="twitter:title" content="Salma benslimane's Portfolio 👋">
         <meta name="twitter:description" content="Second Year Generalist Student Engineer at Ecole Centrale Casablanca with a specialization in Data analysis and AI Engineering.">
-        <meta name="twitter:image" content="https://github.com/nucerl/myPortfolio/blob/main/assets/snaps/light.png?raw=true">
+        <meta name="twitter:image" content="https://github.com/salmabenslimane/portfolio/blob/main/assets/img/light.png?raw=true">
 
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-2367QRTG56"></script>
