--- a/index.html
+++ b/index.html
@@ -1047,7 +1047,7 @@
                             <a href="#paper" class="footer__link">Certifications</a>
                         </li>
                         <li>
-                            <a href="#meeting" class="footer__link">Meeting</a>
+                            <a href="#contact" class="footer__link">Contact</a>
                         </li>
                     </ul>
 
