--- a/index.html
+++ b/index.html
@@ -803,6 +803,8 @@
                                     <li class="projects__modal-project">
                                         <i class="uil uil-check-circle projects__modal-icon"></i>
                                         <p>Projet Learning By Doing</p>
+                                        <i class="uil uil-check-circle projects__modal-icon"></i>
+                                        <p>Développement d’un système intelligent de controle de la température et de la luminosité en fonction des paramètres extérieurs, et d’une application (kotlin/Java) qui permet de controler le système à distance</p>
                                     </li>
                                 </ul>
                             </div>
